# world_stage

./: .gitignore  LICENSE  app.py  build_backend.py  deploy.sh  gunicorn_conf.py  pyproject.toml  utils.py
routes/: results.py  scoreboard.py
scripts/: build_flag_catalog.py  compress-public-assets.sh  deploy-public-assets.sh  host-deploy-public-assets.sh  host-deploy.sh
static/: index.css  scoreboard.css  scoreboard.js
templates/: error.html  open_votings.html  results.html  results_index.html  scoreboard.html  songs.html  user_votes.html
tests/: conftest.py  data.sql  test_admin_draw.py  test_admin_recap.py  test_analytics_cache.py  test_api_country.py  test_api_discovery.py  test_api_recap.py  test_api_results.py  test_api_song.py  test_api_voting.py  test_api_year.py  test_member.py  test_performance.py  test_radio.py  test_revote.py  test_scrobble.py  test_static_assets.py  test_taste_similarity.py
world-stage/: app.py  schema.sql  songs.csv
world-stage/routes/: vote.py
world-stage/static/: scoreboard.css  scoreboard.js
world-stage/templates/: scoreboard.html  successfully_voted.html
world_stage/: __init__.py  db.py  index.py  logging_setup.py  media.py  models.py  performance.py  results.py  schema.sql  scrobble.py  utils.py  vote.py  wsgi.py
world_stage/import_data/: alternative_names.csv  countries.csv  dates.csv  points.json  submissions.txt  votes.json
world_stage/migrations/: 20250511151156_expand_user_table.sql  20250512115949_add_show_date.sql  20250512124835_modify_column_types.sql  20250512193049_add_extra_song_info.sql  (+62 more)
(+178 files in other folders)
