[project]
name = "world-stage"
version = "3.6.0"
description = "Voting website for World Stage."
requires-python = ">= 3.12"
dependencies = [
    "flask",
    "markdown-it-py",
    "psycopg[binary,pool]"
]

[build-system]
requires = ["flit_core<4", "brotli"]
build-backend = "build_backend"
backend-path = ["."]