[project]
name = "world-stage"
version = "3.16.5"
description = "Voting website for World Stage."
requires-python = ">= 3.12"
dependencies = [
    "flask",
    "markdown-it-py",
    "psycopg[binary,pool]"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "build_backend"
backend-path = ["."]

[tool.flit.sdist]
exclude = ["world_stage/files/**", "world_stage/static/**"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.pyright]
include = ["world_stage"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
